[package]
name = "PhotoBooth"
version = "0.1.0"
authors = ["Kasil <kasil@loutre.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gphoto = "0.1.2"
telegram-bot = "0.8.0"
chrono = "0.4"
futures = "0.3.15"
tokio = {version = "0.2", features = ["macros", "io-util", "fs"]}

